# mrg

./: .gitignore  Makefile  README  README.md  configure  meson.build  mrg-terminal
.mm/: bin  lib  magic  pkgconfig  tests
amalgamation/: Makefile  mrg-amalgamation.c  test  test.c
data/: events.html  index  index.html  theme.css  todo.html  ufb  xhtml.html
docs/: 30-title.html  31-hello.c  32-bigger.c  33-text-press.c  34-events.c  36-style-context.c  37-stylesheet.c  38-inlinexml.c  39-inlinexml2.c  40-margin-a.c  40-margin-b.c  41-margin.c  42-links.c  43-shape-ev.c  44-dependencies.html  45-backends.html  46-drag.c  47-vt100.html  48-mmm.html  49-philo.html  50-future.html  55-bezier.c  css-2.1.html  css.html  index.html  mrg.css  style.css  svg.html  test.html
examples/: 31-hello.c  32-bigger.c  33-text-press.c  34-events.c  35-inline-style.c  36-style-context.c  37-stylesheet.c  38-inlinexml.c  39-inlinexml2.c  40-margin-a.c  40-margin-b.c  41-margin.c  42-links.c  43-shape-ev.c  46-drag.c  55-bezier.c  LICENSE  a.out  audio.c  client_move.c  css.c  drag.c  events.c  fontgen.c  foo.c.disabled  gtk-embed.c  hello-css.c  hello.c  html.c  html_c  image.c  in-process-compositor.c  meson.build  term  text.c  vectors.c
lib/: Makefile  gen-data.sh  meson.build  mrg-audio.c  mrg-audio.h  mrg-backend-gtk.c  mrg-backend-mem.c  mrg-backend-mmm.c  mrg-backend-terminal.c  mrg-backend-ufb.c  mrg-binding.c  mrg-config.h  mrg-events.c  mrg-events.h  mrg-focus.c  mrg-host.c  mrg-host.h  mrg-http.c  mrg-http.h  mrg-image.c  mrg-internal.h  mrg-list.c  mrg-list.h  mrg-restarter.c  mrg-sha256.c  mrg-string.c  mrg-string.h  mrg-style-properties.c  mrg-style.h  mrg-stylesheet.c  mrg-text.c  mrg-text.h  mrg-uri-fetcher.c  mrg-utf8.c  mrg-utf8.h  mrg-util.c  mrg-util.h  mrg-vt.c  mrg-vt.h  mrg-xml-render.c  (+7 more)
lib/data/: dark.css  index  mrg.css  mrg.html
lua/: README  browse.lua  flipgame.lua  host.lua  lyd.lua  mrg.lua  test-stop-propagation.lua  test-tap.lua
luajit/: README  browse.lua  edit.lua  flipgame.lua  host.lua  microraptor-synth.lua  mrg.lua  paddlewar.lua  test-stop-propagation.lua  test-tap.lua  test.lua  zn.lua
tests/: Makefile  acid1.html  classes.html  csso.html  debug.html  float-madness.html  horiz-dist.html  img.html  mrg.css  mrg.html  nth-child.html  render-png.sh  svg.html  test.html  todo  todo.html
tests/reference/: acid1  classes  css  csso  debug  events  float-madness  horiz-dist  img  mrg  nth-child  svg  test  todo  xHtml  xhtml  xpng.html
